--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -95,11 +96,9 @@
                     Your brand's next chapter begins here.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
-                      <a href="#contact">Message Us Now</a>
+                      <a href="https://www.instagram.com/whiteheart.marketing/" target="_blank">Message Us Now</a>
                     </div>
-                    <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> +91 9146904270</a>
-                    </div>
+                    
                   </div>
                 </div>
               </div>
@@ -299,7 +298,7 @@
           <div class="inner-content">
             <h2>Founder & CEO</h2>
             <div class="man-image"><img class="image" src="./assets/images/ceo.png">
-              <a id="instagram-icon" href="https://www.instagram.com/" target="_blank">
+              <a id="instagram-icon" href="https://www.instagram.com/johnxnyy" target="_blank">
                 <img src="./assets/images/insta.png" class="middle" alt="Instagram Icon">
               </a>
             </div>
@@ -325,7 +324,7 @@
             <div class="info">
               <span><i class="fa fa-phone"></i> <a href="tel:+919146904270">+91 9146904270</a></span>
               <span><i class="fa fa-envelope"></i> <a
-                  href='mailto:agentavery@sample.com?subject="WhiteHeartMarketing"'>admin@whiteheartmarketing.com</a></span>
+                  href='mailto:admin@whiteheartmarketing.com?subject="WhiteHeartMarketing"'>admin@whiteheartmarketing.com</a></span>
           </div>
           </div>
         </div>
@@ -422,8 +421,8 @@
             </div>
             <a href="#">admin@whiteheartmarketing.com</a>
             <ul>
-              <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://wa.me/+919146904270" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+              <li><a href="https://www.instagram.com/whiteheart.marketing/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
